--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -58,8 +58,15 @@ nav a:hover {
 .otherskill {background-color: #A2AB6F; border-radius: 20px; flex:1; margin: 20px; padding: 20px;}
 .otherskill p {color: #fcfbf7;}
 .flexskill {display:flex;}
-.skillnav {margin-bottom: 60px; padding:15px;}
 .intro {width: 70%; align-self: center;margin-left: 20px;}
 
 .self {max-width: 100%;}
 .contact2 {flex-wrap: wrap;}
+@media only screen and (max-width:800px) {
+    nav.a {
+        display: block;
+        margin-bottom:10px;
+        margin-top:10px;
+    }
+    nav span {display: none;}
+}
