--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -63,7 +63,7 @@ nav a:hover {
 .self {max-width: 100%;}
 .contact2 {flex-wrap: wrap;}
 @media only screen and (max-width:800px) {
-    nav.a {
+    nav a {
         display: block;
         margin-bottom:10px;
         margin-top:10px;
