--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -9,7 +9,7 @@ body{
     background-color:#FBF7EE;
     color:#A75D5D;
     }
-p{color:#A75D5D;}
+p{color:#720000;}
 a{color:#6D773E;}
 a:hover {color:#A2AB6F;} 
 nav {
