--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -4,7 +4,7 @@ h2 {font-size: 1.5em;}
 .evenrow {background-color:antiquewhite;}
 
 h1 {color:#720000;}
-h2 {color:#5c6533;}
+h2 {color:#1f2211;}
 body{
     background-color:#FBF7EE;
     color:#A75D5D;
