--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -13,7 +13,7 @@ p,li,footer {color:#720000;}
 a{color:#6D773E;}
 a:hover {color:#A2AB6F;} 
 nav {
-    background-color: #7d1515;
+    background-color: #991a1a;
     padding: 1em;
     margin-bottom: 3em;
 }
@@ -56,7 +56,7 @@ nav a:hover {
 .headskill {text-align: center;}
 .coreskill {display: flex; flex:3; justify-content: space-around; margin-left: 2em;margin-top: 5em;}
 .otherskill {background-color: #A2AB6F; border-radius: 20px; flex:1; margin: 2em; padding: 2em;}
-.otherskill p {color: #fcfbf7;}
+.otherskill p {color: #6D773E;}
 .flexskill {display:flex;}
 .intro {width: 70%; align-self: center;margin-left: 2em;}
 
