--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -11,7 +11,7 @@ body{
     }
 p,li,footer {color:#720000;}
 nav {
-    background-color: #A2AB6F;
+    background-color: #FFFFFF;
     padding: 1em;
     margin-bottom: 3em;
 }
