--- a/project6/stylesheet.css
+++ b/project6/stylesheet.css
@@ -105,6 +105,8 @@
       iframe {
         justify-content: center;
       }
+      form {color: #ffffff;
+      }
 
 }
 @media only screen and (min-width: 601px){
@@ -185,6 +187,9 @@
       }
       iframe {
         justify-content: center;
+      }
+      form {
+        color: #ffffff;
       }
 
 }
